# pharmasaas

./: README.md
Vibes/Seraphine/: .eslintrc.cjs  .gitignore  .prettierrc  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.eslint.json  tsconfig.json  turbo.json  vitest.config.ts
Vibes/Seraphine/.bmad-core/: install-manifest.yaml
Vibes/Seraphine/.github/workflows/: ci.yml
Vibes/Seraphine/.husky/_/: husky.sh
Vibes/Seraphine/.turbo/daemon/: 8f04ab85c8b746d0-turbo.log.2025-10-20  8f04ab85c8b746d0-turbo.log.2025-10-21
Vibes/Seraphine/apps/api/: README.md  package.json  tsconfig.build.json  tsconfig.json
Vibes/Seraphine/apps/forecast-worker/: README.md  package.json  pyproject.toml
Vibes/Seraphine/apps/forecast-worker/src/: __init__.py
Vibes/Seraphine/apps/forecast-worker/src/jobs/: retrain.py
Vibes/Seraphine/apps/web/: README.md  package.json  tsconfig.json  tsconfig.tsbuildinfo
Vibes/Seraphine/convex/: README.md  package.json  schema.ts  tsconfig.json
Vibes/Seraphine/convex/functions/: auditLog.ts
Vibes/Seraphine/docs/: architecture.md  front-end-spec.md  prd.md
Vibes/Seraphine/docs/architecture/: api-specification.md  backend-architecture.md  change-log.md  checklist-results-report.md  coding-standards.md  components.md  core-workflows.md  data-models.md  database-schema.md  dependency-integration-management.md  deployment-architecture.md  development-workflow.md  engineering-governance.md  error-handling-strategy.md  (+13 more)
Vibes/Seraphine/infra/: README.md
Vibes/Seraphine/scripts/: README.md  seed-db.ts
(+28 files in other folders)
